<resources>

    <!--    http://app.thepatidar.com/index.php/postws/getStoreSearch?item_name=t&r_id=40&page=1-->
    <!-- fonts name s-->
    <!--<string name="font_gujarati_saral">Gujrati-Saral-1.ttf</string>-->

    <string name="font_clan_pro_narrbok">ClanPro-NarrBook.otf</string>

    <string name="ClanPro_NarrBookMedium">ClanPro-NarrMedium.otf</string>
    <string name ="font_guj">guj2.ttf</string>
    <string name="app_name">The Patidar</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">"Please check your internet connection"</string>
    <string name="no_records">"No Records"</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="gujarati_text">અકસ્માતમાં </string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date Of Birth</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_frgt">Forgot Password</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="err_msg_lname">Enter the Last Name</string>
    <string name="err_msg_fname">Enter your First Name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_dob">Enter the Date Of Birth</string>
    <string name="err_msg_mobile">Enter the Mobile</string>
    <string name="err_msg_comm_type">Select Community Type</string>
    <string name="err_msg_comm_cat">Select Community Category</string>
    <string name="err_msg_education">Select your education</string>
    <string name="err_msg_profession">Select your profession</string>
    <!--Password message-->

    <string name="err_msg_current_password">Enter Current password</string>
    <string name="err_msg_new_password">Enter New password</string>
    <string name="err_msg_cofirm_password">Enter Cofirm password</string>
    <string name="err_msg_valid_current_password">Current Password must be 6 character long</string>
    <string name="err_msg_valid_new_password">New Password must be 6 character long</string>
    <string name="err_msg_valid_confirm_password">Confirm Password must be 6 character long</string>
    <string name="err_msg_valid_password_match">New Password and Confirm password did not match</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="hint_search_name">search name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Logout</string>
    <string name="share_app">Share App</string>
    <string name="font_size">Change Font Size</string>



    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="nav1">News</string>
    <string name="nav2">Store</string>
    <string name="nav3">Gallery</string>
    <string name="nav4">Directory</string>
    <string name="nav5">User</string>
    <string name="nav6">About Us</string>
    <string name="nav7">Setting</string>

    <string name="register">Register</string>
    <string name="usernme">Sachin</string>
    <string name="skipp"><u>Skip</u></string>
    <string name="forgot">Forgot Password?</string>
    <string name="sms_verification_code">Your Verification OTP for THE PATIDAR App is : </string>
    <string name="enter_otp">(Enter the OTP below in case if we fail to detect the sms automatically)</string>
    <string name="remove_item">Are you sure you want to remove item?</string>
    <string name="enter_number">(Your password will be sent to this number)</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="visible">Visible Contact</string>
    <string-array name="community_categaory">
        <item>Select Community Category</item>
        <item>Kadva patidar</item>
        <item>Leuva patidar</item>
        <item>Kutchi patidar</item>
        <item>Others</item>
    </string-array>


    <string-array name="community_type">
        <item>Select Community Type</item>
        <item>1 gam</item>
        <item>2 gam</item>
        <item>4 gam</item>
        <item>5 gam</item>
        <item>6 gam</item>
        <item>10 gam</item>
        <item>12 gam</item>
        <item>14 gam</item>
        <item>15 gam</item>
        <item>22 gam</item>
        <item>24 gam</item>
        <item>27 gam</item>
        <item>42 gam</item>
        <item>48 gam</item>
        <item>72 gam</item>
        <item>84 gam</item>
        <item>Other</item>
    </string-array>

    <!-- array of education  -->

    <string-array name="Education">
        <item>Select your education</item>
        <item>10th </item>
        <item>12th</item>
        <item>Graduate</item>
        <item>PostGraduate</item>
        <item>Diploma</item>
        <item>ITI</item>
        <item>Other</item>
    </string-array>

    <!--  array of professions-->
    <string-array name="Profession">
        <item>Select your profession</item>
        <item>Government Sector</item>
        <item>Business/Consultancy</item>
        <item>Private Sector</item>
        <item>Informal</item>
        <item>Other</item>
    </string-array>




    <!--Alert and snack bar message-->

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_to_setting">Go To Setting</string>

    <string name="permission_storage_message">App requires STORAGE permission to save photo in sd card </string>
    <string name="permission_call_phone_message">App requires CALL_PHONE permission to make a call</string>
    <string name="permission_read_sms">App requires SMS permission to read OTP</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="like_message">Are you sure you want to like this post?</string>
    <string name="already_liked">You have already liked this post</string>
    <string name="liked_post">You liked this post successfully.</string>
    <!-- Add Item Validation message-->
    <string name="choose_categaory">Please choose any category</string>
    <string name="enter_item_name">Please enter Item Name</string>
    <string name="enter_item_price">Please enter Item Price</string>
    <string name="enter_item_qty">Please enter Item Qty</string>
    <string name="enter_item_desc">Please enter Item Desc</string>
    <string name="select_item_image">Please select item image</string>
    <string name="enter_address">Please enter Address</string>
    <string name="unregistered_user">You need to registered your profile to access this feature.</string>
    <string name="goto_register">Go to Register</string>
    <string name="verify">Verification</string>
    <string name="changepassword">Change Password</string>
    <string-array name="category">
        <item>Select Category</item>
        <item>Auto Mobile</item>
        <item>Home &amp; Decore</item>
        <item>Mobile</item>
        <item>Electronics &amp; Appliances</item>
        <item>Furniture</item>
        <item>Book &amp;Sports</item>
        <item>Clothing</item>
        <item>Services</item>
        <item>Jobs</item>
        <item>RealEstate</item>
        <item>Others</item>
    </string-array>

    <string name="about_us">આદરણીય જ્ઞાતિજનો
પાટીદાર સમાજ ના ભાઈ ઓ તથા બહેનો ને આ એપ્લિકેશનમાં જોડાવા બદલ ખુબ ખુબ અભિનંદન.
અમારું ધ્યેય આ એપ્લિકેશન થકી, દેશ પરદેશમા વસેલા સમાજ ના ભાઈ ઓ તથા બહેનો ને સંગઠિત કરવાનો અમારો પ્રયાસ છે. વિના મુલ્યે અપાતી આ એક સેવા છે જેમાં આપના સમાજ ના પાટીદાર મિત્રો ને જીવન ઉપયોગી માહિતી, સમાજ ના સમાચાર, લેવડ દેવળ અને રોજગાર મળી રહે તે હેતુ થી આ એપ્લિકેશન બનવા માં આવી છે. આ એપ્લિકેશન માં તમારી માહિતી સંપૂર્ણ પણે સુરક્ષીત રાખવામાં આવી છે. આ એપ્લિકેશેન માં આપણાં સમાજના વિવિધ સામાજીક, ધાર્મિક અને આર્થિક સહાયના પ્રસંગોને સમાવી લેવામાં આવશે. આ સાથે સાથે સાંસ્ક્રુતિક અને બીજા પ્રસંગોનાં ફોટો અને વિડિઓને જોઈ શકાશે. આ એક વિનામુલ્યે અમુલ્ય સેવા છે જેનો લાભ લેવા તથા દેશ પરદેશમા વસેલા સમાજ ના બંધુઓને જણાવશો.

ધંધાકીય કામકાજ અંગે ગુણવત્તાસભર પ્રોફેશનલ ક્ષમતા કેળવાય તે હેતુસર ઉપલબ્ધ ધંધાકીય માહિતી મળી શકશે.
આર્થિક રીતે નબળા જ્ઞાતિભાઇઓ માટે આરોગ્ય વિષયક બાબત જેવી કે, ક્ષય, કેન્સર વગેરે ગંભીર બિમારીની સારવાર માટે મદદની જાણ કરી શકાશે.
સમાજને સ્પર્શતા પ્રશ્નો અને ઉકેલ ની ચર્ચા-વિચારણા ઇ-મેઇલ દ્વારા થઇ શકશે.

ખાસ કરીને વિદ્યાર્થી મિત્રોને મળતા લાભની જાણકારી પૂરી પાડવા માં આવશે.
નોંધ : અમે સંસ્થા કોઈ પણ પ્રકારની તમારી માહિતી ત્રાહિત વ્યક્તિ ને આપતા નથી.
જર્મનિઅમ ઇન્ક એક સોફ્ટવરે બનાવતી કોમ્પન્ય છે જેના સાહસ થાકી આ પાટીદાર એપ્લિકેશેન વિના મુલ્યે આપવા માં આવે છે.
</string>

</resources>
