<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom_font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_focused"
    android:orientation="vertical">


    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.patelapp.Custom.CustomTextView
            style="@style/textview"
            android:clickable="true"
            android:text="@string/enter_number"
            custom_font:custom_font="@string/font_clan_pro_narrbok"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mob"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextInputLayout"
            >

            <com.patelapp.Custom.CustomEditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:maxLength="10"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:singleLine="true"
                android:theme="@style/MyEditText"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />
        </android.support.design.widget.TextInputLayout>

        <com.patelapp.Custom.CustomButton
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button"
            android:text="@string/btn_submit"
            android:textColor="@drawable/text_color"
            custom_font:custom_font="@string/font_clan_pro_narrbok"
            />

    </LinearLayout>

</LinearLayout>