<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom_font="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_focused"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                app:hintTextAppearance="@style/TextInputLayout"
                >

                <com.patelapp.Custom.CustomEditText
                    android:id="@+id/etCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="14"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:theme="@style/MyEditText"
                    custom_font:custom_font="@string/font_clan_pro_narrbok"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNewPassword"
                style="@style/TextLabel"
                app:hintTextAppearance="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.patelapp.Custom.CustomEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:maxLength="14"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:singleLine="true"
                    android:theme="@style/MyEditText"
                    custom_font:custom_font="@string/font_clan_pro_narrbok"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/TextLabel"
                app:hintTextAppearance="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.patelapp.Custom.CustomEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="14"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:theme="@style/MyEditText"
                    custom_font:custom_font="@string/font_clan_pro_narrbok"
                    android:textColorHint="@color/text_hint"

                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <com.patelapp.Custom.CustomButton
                android:id="@+id/btnSubmit"
                style="@style/button"
                android:background="@drawable/button"
                android:text="@string/submit"
                android:textColor="@drawable/text_color"
                android:theme="@style/MyEditText"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>