<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom_font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/edit" />

            <com.patelapp.Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#D9DEE4">

        </View>


        <LinearLayout
            android:id="@+id/llChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/changepass" />



            <com.patelapp.Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#D9DEE4">

        </View>


        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_share_grey"
                android:layout_gravity="center"
                />

            <com.patelapp.Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#D9DEE4">

        </View>


        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/logout"
                android:layout_gravity="center"
                />

            <com.patelapp.Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                custom_font:custom_font="@string/font_clan_pro_narrbok"
                />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#D9DEE4">

        </View>

    </LinearLayout>
</ScrollView>





